--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -1,3 +1,45 @@
 // Place all the styles related to the store controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.store {
+  h1{
+    margin: 0;
+    padding-bottom: 0.5em;
+    font: 150% sans-serif;
+    color: #226;
+    border-bottom: 3px dotted #77a;
+  }
+
+  .entry {
+    overflow: auto;
+    margin-top: 1em;
+    border-bottom: 1px solid #559;
+    min-height: 100px;
+    img {
+      width: 80px;
+      margin-top: 5px;
+      margin-bottom: 15px;
+      position: absolute;
+    }
+
+    h3 {
+      font: 120% sans-serif;
+      margin-left: 100px;
+      margin-bottom: 5px;
+      color: #227;
+    }
+
+    p, .price_line {
+      margin-left: 100px;
+      margin-top: 0.5em;
+      margin-bottom: 0.8em;
+    }
+
+    .price {
+      color: #44a;
+      font-weight: bold;
+      margin-right: 3em;
+    }
+  }
+}
