Update links on Home, add display DateTime

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,11 @@
 <div id="columns">
   <div id="side">
     <ul>
-      <li><a href="http://www....">Home</a></li>
-      <li><a href="http://www..../faq">FAQ</a></li>
-      <li><a href="http://www..../news">News</a></li>
-      <li><a href="http://www..../contact">Contact</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/faq">FAQ</a></li>
+      <li><a href="/news">News</a></li>
+      <li><a href="/contact">Contact</a></li>
+      <li><a>DateTime: <%= Time.now %></a></li>
     </ul>
   </div>
   <div id="main">
